--- a/hw/gerber/miniecu.bom.html
+++ b/hw/gerber/miniecu.bom.html
@@ -1,31 +1,43 @@
-<b>Partlist exported from /home/vovan/eagle/miniecu/miniecu.sch at 23.01.14 15:14</b>
+<b>Partlist exported from /home/vovan/eagle/miniecu/miniecu.sch at 09.03.14 23:18</b>
 <p>
 <table>
-<tr><td><b>Qty</b></td><td><b>Value</b></td><td><b>Device</b></td><td><b>Package</b></td><td><b>Parts</b></td><td><b>Description</b></td><td><b>MF</b></td><td><b>MPN</b></td><td><b>OC_FARNELL</b></td><td><b>OC_NEWARK</b></td><td><b>PROD_ID</b></td></tr>
-<tr><td>2</td><td></td><td>TAC_SWITCHSMD</td><td>TACTILE_SWITCH_SMD</td><td>SW1, SW2</td><td>Momentary Switch</td><td></td><td></td><td></td><td></td><td>SWCH-08247</td></tr>
-<tr><td>3</td><td>0.022</td><td>C-EUC0603</td><td>C0603</td><td>C1, C11, C12</td><td>CAPACITOR, European symbol</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>10</td><td>0.1</td><td>C-EUC0603</td><td>C0603</td><td>C2, C3, C4, C5, C7, C9, C10, C13, C14, C15</td><td>CAPACITOR, European symbol</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>2</td><td>1.0</td><td>C-EUC0805</td><td>C0805</td><td>C6, C8</td><td>CAPACITOR, European symbol</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>7</td><td>10k 1%</td><td>R-EU_R0805</td><td>R0805</td><td>R3, R4, R5, R7, R12, R16, R19</td><td>RESISTOR, European symbol</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>4</td><td>140</td><td>R-EU_R0603</td><td>R0603</td><td>R6, R8, R14, R15</td><td>RESISTOR, European symbol</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>1</td><td>2PT_GND_TIE</td><td>2PT_GND_TIE</td><td>2PT_GND_TIE</td><td>PT1</td><td>Package for connecting two ground nets in one place.</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>4</td><td>5.1k</td><td>R-EU_R0603</td><td>R0603</td><td>R1, R2, R9, R18</td><td>RESISTOR, European symbol</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>1</td><td>B3B-XH-A</td><td>FLOW_SENS-B3B-XH-A</td><td>B3B-XH</td><td>XP2</td><td>JST XH CONNECTOR</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>1</td><td>B4B-XH-A</td><td>IGN_POWER-B4B-XH-A</td><td>B4B-XH</td><td>XP4</td><td>JST XH CONNECTOR</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>1</td><td>B4B-XH-A</td><td>UART-B4B-XH-A</td><td>B4B-XH</td><td>XP3</td><td>JST XH CONNECTOR</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>1</td><td>B6B-XH-A</td><td>SENSORS-B6B-XH-A</td><td>B6B-XH</td><td>XP1</td><td>JST XH CONNECTOR</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>1</td><td>BSS123LT1G</td><td>MOSFET-NCHANNELBSS123LT1G</td><td>SOT23</td><td>VT1</td><td>Common NMOSFET Parts</td><td></td><td></td><td></td><td></td><td>TRANS-08345</td></tr>
-<tr><td>3</td><td>FB</td><td>FB</td><td>0603</td><td>L1, L2, L3</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>1</td><td>ISO7221A</td><td>ISO7221A</td><td>SO-08</td><td>DD3</td><td>DUAL DIGITAL ISOLATORS</td><td></td><td>ISO7221AD</td><td>1390651</td><td>48M0672</td><td></td></tr>
-<tr><td>1</td><td>KAA-3528ESGC</td><td>KAA-3528ESGC</td><td>KA-3528</td><td>HL1</td><td>KAA-3528ESGC</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>1</td><td>MCP1703</td><td>MCP1700SOT-23</td><td>SOT23</td><td>DA1</td><td>VOLTAGE REGULATOR</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>1</td><td>MINIECU_LOGO</td><td>MINIECU_LOGO</td><td>MINIECU_LOGO</td><td>LOGO2</td><td>Logo imported from bmp.</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>4</td><td>MOUNT-HOLE3.2</td><td>MOUNT-HOLE3.2</td><td>3,2</td><td>H1, H2, H3, H4</td><td>MOUNTING HOLE with drill center marker</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>1</td><td>OSHW-LOGOL</td><td>OSHW-LOGOL</td><td>OSHW-LOGO-L</td><td>LOGO1</td><td>Open Source Hardware Logo This logo indicates the piece of hardware it is found on incorporates a OSHW license and/or adheres to the definition of open source hardware found here: http://freedomdefined.org/OSHW</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>1</td><td>SPI_FLASH-X25XXSMD</td><td>SPI_FLASH-X25XXSMD</td><td>SO08</td><td>DD2</td><td>8pin SPI Flash series x25xx. Works with devices like W25X32 and BR25L32</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>1</td><td>STM32F050F</td><td>STM32F050F</td><td>TSSOP20</td><td>DD1</td><td>STM32F050F - Coretex-M0 48 MHz; 4 kB RAM; 16/32 kB FLASH</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>3</td><td>USBLC6-2L</td><td>USBLC6-2SC6</td><td>SOT-23-6L</td><td>VD1, VD2, VD3</td><td>VERY LOW CAPACITANCE ESD PROTECTION 2 line</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>1</td><td>VN5E025AJ-E</td><td>VN5E025AJ-E</td><td>POWERSSO-12</td><td>DA2</td><td>Single channel high-side driver with analog current sense</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>2</td><td>np</td><td>R-EU_R0603</td><td>R0603</td><td>R10, R11</td><td>RESISTOR, European symbol</td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td>2</td><td>np</td><td>R-EU_R0805</td><td>R0805</td><td>R13, R17</td><td>RESISTOR, European symbol</td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td><b>Qty</b></td><td><b>Value</b></td><td><b>Device</b></td><td><b>Package</b></td><td><b>Parts</b></td><td><b>Description</b></td><td><b>FREQUENCY</b></td><td><b>MF</b></td><td><b>MPN</b></td><td><b>OC_FARNELL</b></td><td><b>OC_MOUSER</b></td><td><b>OC_NEWARK</b></td><td><b>PROD_ID</b></td><td><b>VALUE</b></td></tr>
+<tr><td>2</td><td></td><td>JUMPER-2SMD-NO</td><td>SJ_2S-NO</td><td>JP1, JP2</td><td>Jumper</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>0.01</td><td>C-EUC0603</td><td>C0603</td><td>C19</td><td>CAPACITOR, European symbol</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>11</td><td>0.1</td><td>C-EUC0603</td><td>C0603</td><td>C1, C4, C5, C6, C7, C8, C9, C12, C13, C16, C17</td><td>CAPACITOR, European symbol</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>0.33</td><td>C-EUC0603</td><td>C0603</td><td>C15</td><td>CAPACITOR, European symbol</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>3</td><td>1.0</td><td>C-EUC0805</td><td>C0805</td><td>C10, C11, C18</td><td>CAPACITOR, European symbol</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>1.5k</td><td>R-EU_R0603</td><td>R0603</td><td>R7</td><td>RESISTOR, European symbol</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>6</td><td>10k</td><td>R-EU_R0603</td><td>R0603</td><td>R1, R10, R11, R14, R15, R18</td><td>RESISTOR, European symbol</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>5</td><td>10k 1%</td><td>R-EU_R0805</td><td>R0805</td><td>R4, R5, R6, R12, R16</td><td>RESISTOR, European symbol</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>3</td><td>140</td><td>R-EU_R0603</td><td>R0603</td><td>R2, R3, R9</td><td>RESISTOR, European symbol</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>1k</td><td>R-EU_R0603</td><td>R0603</td><td>R8</td><td>RESISTOR, European symbol</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>22p</td><td>C-EUC0603</td><td>C0603</td><td>C14</td><td>CAPACITOR, European symbol</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>2PT_GND_TIE</td><td>2PT_GND_TIE</td><td>2PT_GND_TIE</td><td>PT1</td><td>Package for connecting two ground nets in one place.</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>2</td><td>6p</td><td>C-EUC0603</td><td>C0603</td><td>C2, C3</td><td>CAPACITOR, European symbol</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>750</td><td>R-EU_R0603</td><td>R0603</td><td>R19</td><td>RESISTOR, European symbol</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>B4B-XH-A</td><td>IGN_POWER-B4B-XH-A</td><td>B4B-XH</td><td>XP6</td><td>JST XH CONNECTOR</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>B4B-XH-A</td><td>UART-B4B-XH-A</td><td>B4B-XH</td><td>XP5</td><td>JST XH CONNECTOR</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>B6B-XH-A</td><td>SENSORS-B6B-XH-A</td><td>B6B-XH</td><td>XP4</td><td>JST XH CONNECTOR</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>BAT54C</td><td>BAT54C</td><td>SOT23</td><td>VD1</td><td>Schottky Diodes</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>BSS123LT1G</td><td>MOSFET-NCHANNELBSS123LT1G</td><td>SOT23</td><td>VT1</td><td>Common NMOSFET Parts</td><td></td><td></td><td></td><td></td><td></td><td></td><td>TRANS-08345</td><td></td></tr>
+<tr><td>1</td><td>CSTCE8M00G52-R0</td><td>CSTCE8M00G52-R0</td><td>CSTCE</td><td>ZQ2</td><td>Resonator</td><td>8 MHz</td><td></td><td></td><td></td><td>81-CSTCE8M00G52-R0</td><td></td><td></td><td></td></tr>
+<tr><td>3</td><td>FB</td><td>FB</td><td>0603</td><td>L1, L2, L3</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>FC-12M</td><td>FC-12M</td><td>FC-12M</td><td>ZQ1</td><td>kHz RANGE CRYSTAL UNIT</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>GREEN</td><td>LED-GREEN0603</td><td>LED-0603</td><td>HL1</td><td>Various green LEDs</td><td></td><td></td><td></td><td></td><td></td><td></td><td>DIO-00821</td><td>GREEN</td></tr>
+<tr><td>1</td><td>ISO7221A</td><td>ISO7221A</td><td>SO-08</td><td>DD3</td><td>DUAL DIGITAL ISOLATORS</td><td></td><td></td><td>ISO7221AD</td><td>1390651</td><td></td><td>48M0672</td><td></td><td></td></tr>
+<tr><td>1</td><td>M05X2NO_SILK</td><td>M05X2NO_SILK</td><td>2X5_NOSILK</td><td>XP2</td><td>Header 5x2</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>MCP1703</td><td>MCP1700SOT-23</td><td>SOT23</td><td>DA1</td><td>VOLTAGE REGULATOR</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>MINIECU_LOGO</td><td>MINIECU_LOGO</td><td>MINIECU_LOGO</td><td>LOGO1</td><td>Logo imported from bmp.</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>4</td><td>MOUNT-HOLE3.2</td><td>MOUNT-HOLE3.2</td><td>3,2</td><td>H1, H2, H3, H4</td><td>MOUNTING HOLE with drill center marker</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>MP3V5004DP</td><td>MPXV7025DP</td><td>SOP8-1351</td><td>DA3</td><td>PRESSURE SENSOR - Differential Input, Single-Ended Output</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>OSHW-LOGOL</td><td>OSHW-LOGOL</td><td>OSHW-LOGO-L</td><td>LOGO2</td><td>Open Source Hardware Logo This logo indicates the piece of hardware it is found on incorporates a OSHW license and/or adheres to the definition of open source hardware found here: http://freedomdefined.org/OSHW</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>RED</td><td>LED-RED0603</td><td>LED-0603</td><td>HL2</td><td>Assorted Red LEDs</td><td></td><td></td><td></td><td></td><td></td><td></td><td>DIO-00819</td><td>RED</td></tr>
+<tr><td>1</td><td>SPI_FLASH-X25XXSMD1</td><td>SPI_FLASH-X25XXSMD1</td><td>SO08-EIAJ</td><td>DD2</td><td>8pin SPI Flash series x25xx. Works with devices like W25X32 and BR25L32</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>STM32F373C</td><td>STM32F373C</td><td>LQFP48</td><td>DD1</td><td>STM32F373</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>SWD</td><td>SWD</td><td>1X04-1.27MM</td><td>XP1</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>2</td><td>USBLC6-2L</td><td>USBLC6-2SC6</td><td>SOT-23-6L</td><td>VD2, VD3</td><td>VERY LOW CAPACITANCE ESD PROTECTION 2 line</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>1</td><td>USB_MICROB_PLUGCONN-11752</td><td>USB_MICROB_PLUGCONN-11752</td><td>USB-B-MICRO-SMD_V03</td><td>XP3</td><td>USB Micro-B Plug</td><td></td><td></td><td></td><td></td><td></td><td></td><td>CONN-11752</td><td></td></tr>
+<tr><td>1</td><td>VN5E025AJ-E</td><td>VN5E025AJ-E</td><td>POWERSSO-12</td><td>DA2</td><td>Single channel high-side driver with analog current sense</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td>2</td><td>np</td><td>R-EU_R0805</td><td>R0805</td><td>R13, R17</td><td>RESISTOR, European symbol</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 </table>
